--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">File Manager</string>
+    <string name="search_et_hint">search something...</string>
 </resources>
